@@ -1,4 +1,5 @@
 0.11
+ - Add plugin for 045 field to check 045a.
 
 0.10 2026-02-22T13:19:59+01:00
  - API change: Rewrite to new data model.
